# Cpkg

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  Cpkg.code-workspace  README.md  SECURITY.md  pkg_C.CPP_01.code-workspace  tree.txt
CMAKES/: CMakeLists_V02.txt
CMakes/: CMakeLists_V01.txt
Custom/: msg.h
Func/: pkg.c  pkg.h  print.h
Import/: importAll.h
Include/: color.h  import.h  pkg.h
Package/: pkg.c
apps/: download
apps/PS2/: USBUtil v2.0.rar
cmakes/: CMakeLists_V00.txt
custom/: color.h  msg.h
custom/C++ home/: README.md  TODO.md  build_library.sh
custom/C++ home/inc/: LinkedList.hpp  SDL1.2_pkg.hpp  Sort.hpp  Tree.hpp  Trees.hpp  linkList.hpp  linkedList.hpp  math.hpp  sort.hpp  trees.hpp
custom/C++ home/src/: LinkedList.cpp  Math.cpp  SDL1.2_pkg.cpp  Search.cpp  Tree.cpp  Trees.cpp  linkList.cpp  math.cpp  sort.cpp  trees.cpp
custom/C++ home/test/: test  test.cpp
custom/c/im/: imp_all.h
custom/c/inc/: color.h
custom/cpp/: README.md
custom/cpp/inc/: Math.hpp  Search.hpp
custom/cpp/src/: Sort.cpp  Trees.cpp
custom/cpp/test/: test  test.cpp
custom/inc/: SDL_Msg.h  color.h  msg.h
frameworks/C-SDL1.2 Project Environment/: CMakeLists.txt  build.sh
frameworks/C-SDL1.2 Project Environment/home/project/inc/: inc.h
frameworks/C-SDL1.2 Project Environment/home/project/src/: lib.c  main.c
frameworks/Cpp-Qt5 Project Environment/: CMakeLists.txt  build.sh  run.sh
frameworks/Cpp-Qt5 Project Environment/home/project/inc/: inc.hpp
frameworks/Cpp-Qt5 Project Environment/home/project/res/: NONE
frameworks/Cpp-Qt5 Project Environment/home/project/src/: lib.cpp  main.cpp
frameworks/Normal C Project Environment/: CMakeLists.txt  build.sh
frameworks/Normal Cpp Project Environment/: CMakeLists.txt  build.sh
func/: inputV.h  print.h
func1/: inputVer.h  print.h
import/: imp_All.h  imp_SDL.h  imp_all.h  importAll.h
include/: Header Modular File.h
lib/: Library Modular File.c
pkg/: pkg.c  pkg.h
scripts/cx_cxx/: run
scripts/java/: jrun  run
scripts/python/: odoos
src/: Source Modular File.c
templates/xml/: log4j2.xml
