# set the cmake min version (current - 3.29.3)
cmake_minimum_required(VERSION 3.29.3)

# set the project/app name
project(app)

# set the CMake engine version
set(CMAKE_CXX_STANDARD 17)

# specify the C standard version
set(CMAKE_C_STANDARD 99)

# add the main.cpp file as a source
add_executable(${PROJECT_NAME} ../../project/src/main.c)

# add compiler definitions
add_definitions(-D_DEFAULT_SOURCE)

# add compiler flags
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -g")

# link libraries
target_link_libraries(${PROJECT_NAME} m SDL SDL_ttf SDL_image SDL_mixer)